--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -138,7 +138,7 @@ rest-framework-simplejwt==0.0.2
 rich==13.7.1
 rsa==4.9
 scikit-learn==1.3.2
-scikit-multiflow==0.5.3
+# scikit-multiflow==0.5.3
 scipy==1.13.0
 shellingham==1.5.4
 six==1.16.0
